# AMR-con-ROS

champy_2-0/: CMakeLists.txt  champy.rviz  inicio_robot.sh  package.xml
champy_2-0/launch/: champy_hardware.launch  navtest.launch  rosserial.launch  rtabmap.launch  rviz.launch  slam_localizacion.launch  slam_mapeo.launch
champy_2-0/params/camara_zed_2/: zed.yaml
champy_2-0/params/ekf/: fusion.yaml
champy_2-0/params/lidar/: lidar.yaml
champy_2-0/params/nav/: navtest.yaml
champy_2-0/params/rtabmap/: rtabmap.cfg  rtabmap.yaml  rtabmap_original.cfg
champy_2-0/pruebas/: param.py  parking_test.py  prueba.py  serial.launch  uart.py  urfd.launch
champy_2-0/src/: copiaodo.py  enviodato_app.py  launch_auto.py  launch_mapeo.py  launch_realsense.py  map.py  mod_auto.py  variables_mision.py  wheel_odom.py
champy_2-0/src/GUI/: GUI.py  PyQt5.QtCore  PyQt5.QtGui  PyQt5.QtWidgets  gui_t.py
champy_2-0/urdf/: champy_2-0.urdf.xacro
champy_action_msgs/: CMakeLists.txt  package.xml
champy_action_msgs/action/: parking.action  unparking.action
champy_action_msgs/scrips/: parking_v2.py  parking_v3.py
